umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chebi_ChEBI_30402.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 50
bond_count: 58
sum_formula: C20MgN10O12P2S4W-2
graph6: qhEG_C@AGA?@?@??g??G???O??G??O?G???@?G?O??@???B???A???A????????@????C????G????G???@C????C?????G?????_????P?????C??????_???G?G???C?P??????O????O??????A???????????????@???????O??????Q??@????????????O???????H?
