umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chem3d_aromaticRings.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 99
bond_count: 115
sum_formula: C85N3O4PS4-1
graph6: ~?@bhEH?C@?G?_H?A??_?G?D?C???G??G??C??H???O???_??@???@????_??AG??C?????C????G????G????C????P????@??????_????@?????@?????C_????@?????A???????C??????G??????G??????C??????@??????CG??????A??C????????????@????????_???????G???????H????????O????????G????????G????????C????????@????????AG????????C???????C???????????@??????????_?????????g??????G?????????????C??????????G??????????G??????????C??????????P???????????G???????????_??????????@???????????@???????????C_??????????@??????????A??????????????C????????????G????????????G????????????C????????????@????????????AG????????????C?????????????@?????????????@??????????????_?????????????G?????????????P?????@???????????????????????G??????????????G??????????????C??????????????@??????????????AGG?????????????????????????????@???????????????@????????????????_??????????????@G
