umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chem3d_ny6.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 141
bond_count: 140
sum_formula: C44H83N7O7
graph6: ~?ALhCGGC@?G?_@?@??_?G?@??C??G??G??C??@???G???_??@???@????_???G???@????C????G????G????C????@?????G?????_????@?????@??????_?????G?????@??????C??????G??????G??????C??????@???????G???????_??????@???????@????????_???????GA?????????G?????????O?????????O?????????G?????????A??????????OC?????????O?????????_?????????O?????????C?????????@??????????C??????????O??????????O??????????O??????????C??????????@???????????C???????????O???????????G???????????C???????????A????????????O???????????A????????????C????????????G????????????C????????????A?????????????O????????????A?????????????A?????????????A?????????????A??????????????_?????????????G??????????????_?????????????A??????????????A??????????????A???????????????_??????????????G???????????????O???????????????_??????????????@????????????????_???????????????O???????????????A????????????????O????????????????_???????????????@?????????????????_????????????????O????????????????@?????????????????C?????????????????O?????????????????O?????????????????O?????????????????C?????????????????@??????????????????C??????????????????O??????????????????O??????????????????O??????????????????A???????????????????O??????????????????A???????????????????C???????????????????G???????????????????C???????????????????A????????????????????O???????????????????A????????????????????C????????????????????G????????????????????A?????????????????????_????????????????????G?????????????????????_????????????????????A?????????????????????A?????????????????????A??????????????????????_?????????????????????G??????????????????????_?????????????????????A??????????????????????@??????????????????????@???????????????????????_??????????????
