umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chem3d_ringTest1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 33
sum_formula: C28O
graph6: "\\hEI?C@GK??@?`A?A???@??C??O@????C??A???G??@???G???P??O?????G???@??O?C"
