umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chem3d_sub-biphenyl.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 19
sum_formula: C16O2
graph6: QhEGOC@?G?_PO???_?O?_??C??O
