umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_chem3d_taxol.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 113
bond_count: 119
sum_formula: C47H51NO14
graph6: "~?@p@CGK@@?H?_@?pO???G?@??C??G??G??C??@???G???_??P??@???C???C???A??@????O????????G????CG???@????@?????C`??????????G?A??????_?????G????G??????????C??C????????????C??????@???????O???A?????????????????????????@@_??????@???????O?????????C????????O???????@?????????C???@????@????????@??????????_????????@?????????@????????@?o?????????C??????????_????????????G???????????@????????????G??????????C??????????@???????????C???????????G???????????G???????????G???????????C????????????_???????????C????????????O?????????????_????????????_????????????O?????????????_????????????C?????????????O????????A?????????????C?????????????C??????????????G?????????????O???????????????????@??????????????C?????????????@????????????????_????????????A??????????_??????????????C???????????????????????_??????????????@???????????????@????????????????A???????????????C???????????@????????????????A????????????C?????????????????_????????????????C?????????????????_????????????????????C?????????????????C?????????????????C?????????????????O????????????@??????????????????C??????????????????"
